--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			in Texas but moved here 5 years ago. Thanks for reading my little snippet!</p>
       </div>
       <div class="col-md-5">
-        <img src="victorianguyen.jpg" alt="Victoria Nguyen" width="493" height="657">
+        <img src="vicnguyen.jpg" alt="Victoria Nguyen" width="493" height="657">
 
       </div>
     </div>
