--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
    <hr class="featurette-divider">    
     
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Created by <a href="mailto:victoria.nguyen06a@student.csulb.edu">Phiona Nicole Tumbaga</a> -  <a href="https://www.youtube.com/watch?v=6ouX34lBDk8&ab_channel=%EC%84%A4%EB%8B%B4Seoldam" target="_blank">Pro Gamer</a></p><p>Last updated on 7 May 2021</p>
+  <p>Created by <a href="mailto:victoria.nguyen06a@student.csulb.edu">Victoria Nguyen</a> -  <a href="https://www.youtube.com/watch?v=6ouX34lBDk8&ab_channel=%EC%84%A4%EB%8B%B4Seoldam" target="_blank">Pro Gamer</a></p><p>Last updated on 7 May 2021</p>
     <i class="fas fa-chalkboard-teacher" style="font-size:60px;color:gold;text-shadow:2px 2px 4px #000000;"></i>
 </div>
     </div>
